@@ -1,6 +1,7 @@
 Revision 4.1.16b
 ----------------
 
+- Oneliner CommandGenerator can now optionally ignore non-increasing OIDs.
 - Default CommandResponder now skips non-compliant (Counter64) values
   when responding to a v1 Manager.
 - Fix to state information handling at CommandResponder app.
